Flesh out some sections

--- a/010717-crypto-101.md
+++ b/010717-crypto-101.md
@@ -1,12 +1,49 @@
 # Crypto 101: A Gentle Introduction to Cryptography
 
-This is the introduction in what will be a series of articles diving into different types of cryptography, how they work, and what they are used for.  
+This is the introduction in what will be a series of articles diving into different types of cryptography, how 
+they work, and what they are used for to build some fundamental knowledge for future articles.  This first piece
+ will focus on the social and ethical implications of common citizens empowered by freely available encryption 
+ hat cannot feasibly be cracked within our lifetimes.
 
 1. How do we know the government can't listen in on things?
+If the leaks by Edward Snowden and previous whistleblowers have taught us anything, large governments have a 
+tendency to want to accumulate any data they can about their citizens in the name of national defense.  Luckily 
+for us, thanks to the work of people like Phil Zimmerman, inventor of PGP (Pretty Good Privacy), freely 
+available technology exists to encrypt our communications.  This fundamental technology helps us make sure we 
+know no one gets our credit card information can be recorded in transit to the store we pay and shield 
+communications from the prying Eye of Sauron.  This type of guarantee sounds great, but how do we know our 
+information is safe from wiretapping by ciminals?  
+
   1. No magic in how it works
   2. Prime number factorization problem as example
     - Easy to multiply two primes, hard to find the two primes multiplied to get a number
-  3. Processing power and brute force for cracking encryption
+
+For starters, modern cryptography has no unknowns in how it works, and cryptographers have figured out exactly 
+why it cannot be cracked.  There are some assumptions that crypto is based on.  For example, public key crypto 
+is based on the multiplication of two very large prime numbers.  We're talking hundreds of digits.  The reason 
+this works is because it's very fast for computers to multiply numbers.  Now you have this huge number that's 
+twice as long as the two primes you multiplied together.  The problem of figuring out the initial two primes 
+from the product is a mathematical problem that doesn't have any shortcuts other than to start guessing.  To 
+oversimplify, much of crypto involves "one way functions" like this.  It's easy in one direction, prohibitively 
+hard to reverse engineer how you got the result.  
+
+The sole reason crypto is hard to crack is because of how mathematically infeasible it is to do something.  And 
+the cryptographers of the world have poked, prodded, and beaten these algorithms to find any weaknesses in them 
+that can beat and easily decrypted.  Because of this, we can assume (if the NSA doesn't have some super secret 
+method the mathematicians of the world haven't figured out) that our crypto is secure.  
+
+  3. Ethical concerns
+
+Crypto is a fantastic thing for us, from making it possible to buy things online privately to keeping 
+eavedroppers out of our conversations, but it's time to play Devil's Advocate.  What about terrorists using this
+ technology?  They are certainly able to use this technology the same way as you or I, but what exactly can be 
+ done about it?  Pandora's Box is already open and free crypto tools are long since loose in the world.  
+
+We have seen the political reactions like trying to legislate weakness in encryption we all rely on to keep 
+ourselves secure.  If that happens, it won't change what the terrorists use because it's already out in the 
+world.  You cannot legislate against technology.  It's akin to a force of nature.  You can try telling people to 
+not use something exists and is freely available, but good luck enforcing it.  
+
 2. Typical uses for Cryptography
    - VPNs
    - Credit card information for eCommerce
@@ -20,4 +57,4 @@ This is the introduction in what will be a series of articles diving into differ
   - Use 2-factor authentication (not with SMS!)
 
 
-- Potentially add glossary for the uninitiated defining bits, bytes, hex, and maybe a few other building block pieces of vocabulary
+- Potentially add glossary for the uninitiated defining bits, bytes, hex, and maybe a few other building block pieces of vocabulary, depending on what comes up
